@@ -29,7 +29,7 @@
 					###LABEL_FUNCTION###&nbsp;###FUNCTION###
 				</p>
 			<!-- ###LISTITEM_WRAPPER_FUNCTION### -->
-			<p>###LINK_DETAIL###</p>
+			<p class="tx_bzdstaffdirectory_teamlist_detailLink">###LINK_DETAIL###</p>
 			<p>
 			<!--###LISTITEM_WRAPPER_PHONE### -->
 				<span class="tx_bzdstaffdirectory_teamlist_person_phone">###LABEL_PHONE###&nbsp;###PHONE###</span><br />
@@ -208,7 +208,7 @@
 		<p>###IMAGE###</p>
 		<p><!-- ###FIELD_WRAPPER_TITLE### -->###TITLE###&nbsp;<!-- ###FIELD_WRAPPER_TITLE### -->###FIRST_NAME###&nbsp;###LAST_NAME###
 		<br />###FUNCTION###</p>
-		<p>###LINK_DETAIL###</p>
+		<p class="tx_bzdstaffdirectory_box_detailLink">###LINK_DETAIL###</p>
 	</div>
 <!-- ###TEMPLATE_BOX_PERSON### -->
 
